--- a/views/admin/product.ejs
+++ b/views/admin/product.ejs
@@ -178,8 +178,8 @@
                                         <% } %>
                                       </td>
                                       <td><%= product.name %></td>
-                                      <td>$<%= product.price %></td>
-                                      <td>$<%= product.discountPrice %></td> 
+                                      <td>₹<%= product.price %></td>
+                                      <td>₹<%= product.discountPrice %></td> 
                                       <td><%= product.stock %></td>
 
                                       <td class="text-end">
